# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  gendiff_json.cast  gendiff_plain.cast  gendiff_stylish.cast  gendiff_yaml.cast  generate_diff.cast  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: __init__.py  diff.py  diff_builder.py  formatting.py  parser.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: diff.py  diff_builder.py  gendiff.py
tests/: test_diff.py  test_parser.py
tests/test_data/: result_format_json.txt
